CODE-16 - Moving from JPA to JDBCTemplate and JdbcClient (Spring Boot 3.3.x)
- Update Spring boot 3.3.1
- Added RestClient
- Using bundle for Certificates
- Fixed some tests
- Updated README.md